[package]
name = "telegraph-api-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of Telegraph API"
repository = "https://github.com/heyyyoyy/telegraph-api-rs"
readme = "README.md"
documentation = "https://docs.rs/telegraph-api-rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
serde_urlencoded = "0.7.1"
