[package]
name = "telegraph-api-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of Telegraph API"
repository = "https://github.com/heyyyoyy/telegraph-api-rs"
readme = "README.md"
documentation = "https://docs.rs/telegraph-api-rs"

[features]
default = ["upload"]
upload = ["mime_guess"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = { version = "2.0.4", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_urlencoded = "0.7.1"
